implemented add & list permit notes in backend and added to navs view on frontend
