# app/src/types/ListPermitsOptions.ts
@@ -1,0 +1,6 @@
+import { IStamps } from '../interfaces/IStamps';
+
+export type ListPermitsOptions = {
+  activityId?: string;
+  includeNotes?: boolean;
+} & Partial<IStamps>;
